// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package ai.floedb.floecat.transaction;
option java_multiple_files = true;
option java_package = "ai.floedb.floecat.transaction.rpc";

import "floecat/common/common.proto";
import "floecat/catalog/table.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

enum TransactionState {
  TS_UNSPECIFIED = 0;
  TS_OPEN = 1;
  TS_PREPARED = 2;
  TS_COMMITTED = 3;
  TS_ABORTED = 4;
}

message Transaction {
  string tx_id = 1;
  string account_id = 2;
  TransactionState state = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.Timestamp expires_at = 6;
  map<string,string> properties = 99;
}

message BeginTransactionRequest {
  google.protobuf.Duration ttl = 1;
  ai.floedb.floecat.common.IdempotencyKey idempotency = 2;
  map<string,string> properties = 99;
}
message BeginTransactionResponse {
  Transaction transaction = 1;
}

message TxChange {
  oneof resource_ref {
    ai.floedb.floecat.common.ResourceId table_id = 1;
    string table_fq = 2;
  }

  oneof change_payload {
    // Opaque payload (format-specific).
    bytes payload = 10;
    ai.floedb.floecat.catalog.Table table = 12;
  }
  // Optional: if set, use as the intended blob URI for the target pointer.
  string intended_blob_uri = 11;

  // Optimistic checks for the target resource.
  ai.floedb.floecat.common.Precondition precondition = 20;
}

message PrepareTransactionRequest {
  string tx_id = 1;
  repeated TxChange changes = 2;
  ai.floedb.floecat.common.IdempotencyKey idempotency = 3;
}
message PrepareTransactionResponse {
  Transaction transaction = 1;
}

message CommitTransactionRequest {
  string tx_id = 1;
  ai.floedb.floecat.common.IdempotencyKey idempotency = 2;
}
message CommitTransactionResponse {
  Transaction transaction = 1;
}

message AbortTransactionRequest {
  string tx_id = 1;
  string reason = 2;
}
message AbortTransactionResponse {
  Transaction transaction = 1;
}

message GetTransactionRequest {
  string tx_id = 1;
}
message GetTransactionResponse {
  Transaction transaction = 1;
}

message TransactionIntent {
  string tx_id = 1;
  string account_id = 2;
  string target_pointer_key = 3;
  string blob_uri = 4;
  int64 expected_version = 5;
  google.protobuf.Timestamp created_at = 6;
}

service Transactions {
  rpc BeginTransaction(BeginTransactionRequest) returns (BeginTransactionResponse);
  rpc PrepareTransaction(PrepareTransactionRequest) returns (PrepareTransactionResponse);
  rpc CommitTransaction(CommitTransactionRequest) returns (CommitTransactionResponse);
  rpc AbortTransaction(AbortTransactionRequest) returns (AbortTransactionResponse);
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse);
}
